# 3a-websec-1

./: .gitignore  CMakeLists.txt
exploit/: compile.sh  exploit.py  http.raw  shellcode.S  shellcode.template.S  shellcode.template2.S
zoobar-lab/: Makefile  clean-env.sh  exploit-template.py  http.c  index.html  shellcode.S  sp.c  zook.conf  zookd.c  zookfs.c  zookld.c
zoobar-lab/zoobar/: index.html  setCookie.pl
